Fixed design of user's reviews to be responsive on mobile and desktop devices

--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -1,147 +1,55 @@
-.user-page-container{
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    margin-left: 5%;
-    margin-right: 5%;
-    
-}
-
-.username{
-    font-size: 3em;
-}
-
-.user-info-container{
-    color: white;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.user-info-container p{
-    color: white;
-    font-size: 1.5em;
-}
-
-
-
-
-.section-title{
-    margin-top: 1%;
-    border-bottom: solid 3px black;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 2%;
-    font-size: 1.5rem;
-}
-
-
-
-.section-title:hover{
-    color: white;
-
-}
-
-.favorite-container{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    text-align: center;
-    margin-bottom: 3%;
-}
-
-.favorite-container img{
-    border: 3px solid black;
-    width: 200px;
-    height: 200px;
-    margin-top: 10%;
-    margin-bottom: 10%;
-}
-
-.favorite-container img:hover{
-    border: 3px solid white;
-}
-
-.user-reviews{
-    display: flex;
-    justify-content: space-evenly;   
-}
-
-.review-info{
-    font-size: 1.5rem;
-    
-}
-
-.review-info p{
-    margin-bottom: 1.5%;
-
+body{
+    font-size: 16px;
+    margin: 0;
 }
 
 .page-title{
-    font-size: 1.5rem;
-    margin-top: 2%;
-    border-bottom: solid 3px black;
-    margin-left: 7.5%;
-    margin-right: 6.5%;
+    font-size: 2rem;
+    color: white;
 }
 
 .reviews-page-container{
-    height: auto;
-    
-    margin-top: 3%;
-    margin-left: 10%;
-    margin-right: 10%;
+    width: 100%;
+    height: 100%;
 }
 
 .reviews-container{
-    margin-top: 2%;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 
-.user-listen{
-    display: flex;
-    justify-content: space-evenly; 
-    padding-bottom: 5%;
 
-}
-
-.review-container img{
-    border: 3px solid black;
-    width: 150px;
-    height: 150px;
-   
-}
 
 .single-review{
     display: flex;
     align-items: center;
-    border-bottom: 3px solid #8d9cd3;
-    
-    height: 15em;
-    width: 85%;
+    margin: 0 1em;
+    border-top: 3px solid #8d9cd3;
+    width: 100%;   
+    padding: 2em;
 }
 
 .single-review img{
-    width: 200px;
-    height: 200px;
-    margin-right: 5%;
+    width: 70%;
+    margin-left: 1em;   
+    border: 3px solid black;
 }
 
-.single-review a{
-    margin-right: 5%;
+
+.review-info{
+    margin-right: 1em;
+    font-size: 1rem;
+    
+    width: 100%;
 }
 
-.single-review a:hover{
-    border: 3px solid white;
+
+.single-review img:hover{
+    border: 5px solid #c66375;
 }
 
 .rating-icon{
@@ -149,47 +57,46 @@
 }
 
 
+@media (min-width: 769px){
 
+    .review-info{
+        margin-right: 1em;
+        font-size: 1.5rem;
+        width: 100%;
+    }
+    .reviews-container{
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+    }
 
-.listen-container{
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    margin-left: 5%;
-    margin-right: 5%;
-}
+    .single-review{
+        display: flex;
+        align-items: center;
+        border-top: 3px solid #8d9cd3;
+        width: 100%;       
+        padding: 2em;
+        margin: 0 1em;
+    }
 
-.listen-albums{
+    .single-review img{
+        width: 70%;
+        margin-left: 1em;   
+        border: 5px solid black;
+    }
     
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
+    
+    .review-info{
+        margin-right: 1em;
+        font-size: 1.5rem;   
+        width: 100%;
+    }
 
-.listen-albums a{
-    margin: 1%;
-}
-
-
-
-
-.listen-comp img{
-    width: 150px;
-    height: 150px;
-    border: 3px solid black;
-}
-
-.listen-comp img:hover{
-    width: 150px;
-    height: 150px;
-    border: 3px solid white
 
 }
 
-.title-container{
-    margin-top: 2%;
-    border-bottom: solid 3px black;
-    margin-left: 6.5%;
-    margin-right: 6.5%;
-    font-size: 1.5rem;
-}
+
+
